force-app/main/default/objects/PT__c/PT__c.object-meta.xml
<CustomObject>
    <label>PT</label>
    <nameField>
        <label>PT Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>