force-app/main/default/objects/PT__c/fields/SalesStage__c.field-meta.xml
<CustomField>
    <fullName>SalesStage__c</fullName>
    <label>Sales Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>사전 방문 및 리허설</fullName>
            </value>
            <value>
                <fullName>PT시행</fullName>
            </value>
            <value>
                <fullName>해당없음</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>